# Kotline

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
config/: defaults.json  defaults.yaml  demo_floorplan.json  demo_floorplan.yaml  floorplan.yaml  layer_mapping.json
docs/: RELEASE.md
packaging/: kesit.spec  kotline.desktop  kotline.desktop.in
packaging/windows/: Kotline.iss
scripts/: build_appimage.sh  build_linux.sh  build_windows.ps1  build_windows_installer.ps1  generate_icons.py  generate_icons.sh  install_linux_desktop.sh  kesit.sh  uninstall_linux_desktop.sh
src/kesit/: __init__.py  config.py  models.py  paths.py  units.py
src/kesit/app/: config_io.py  demo.py  pipeline.py  project_state.py
src/kesit/architecture/: defaults.py  elements.py  layer_mapping.py  plan_builder.py  section_rules.py  wall_extraction.py
src/kesit/cad_io/: __init__.py  dxf_reader.py  dxf_writer.py  entity_converter.py
src/kesit/cli/: inspect_dxf.py  run_poc.py  run_section.py
src/kesit/fixtures/: floorplan_expectations.py  synthetic_plan.py
src/kesit/generation/: dxf_exporter.py  svg_exporter.py  (+1 more)
tests/: test_branding.py  test_demo.py  test_depth_metadata.py  test_dxf_reader.py  test_floorplan_section.py  test_i18n.py  test_intersections.py  test_locale_project.py  test_paths.py  test_pipeline.py  test_pipeline_roles.py  test_project_file.py  test_projection.py  test_role_swatch.py  test_section_generation.py  test_units.py  test_vectors.py  test_views.py  test_wall_extraction.py
tests/fixtures/: floorplan_expectations.py  synthetic_plan.py
(+26 files in other folders)
